template/deployment-clean.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "8"
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"my-template:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"my-template\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2023-06-12T23:04:22Z"
    generation: 8
    labels:
      app: my-template
      app.kubernetes.io/component: my-template
      app.kubernetes.io/instance: my-template
    name: my-template
    namespace: hsaid-template
    resourceVersion: "16761721"
    uid: 40987b1a-e690-44cd-a7ee-84486995de4d
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        deployment: my-template
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: my-template
      spec:
        containers:
        - command:
          - /bin/sh
          - -c
          - while true; do echo Writing env variables; env;sleep 10; done
          env:
          - name: VAR1
            value: value1
          - name: VAR2
            value: value2
          image: quay.io/quay/busybox@sha256:92f3298bf80a1ba949140d77987f5de081f010337880cd771f7e7fc928f8c74d
          imagePullPolicy: IfNotPresent
          name: my-template
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-06-12T23:24:33Z"
      lastUpdateTime: "2023-06-12T23:24:33Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2023-06-12T23:04:22Z"
      lastUpdateTime: "2023-06-12T23:35:01Z"
      message: ReplicaSet "my-template-5585845c74" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 8
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
