template/deployment.yaml
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: my-template
      app.kubernetes.io/component: my-template
      app.kubernetes.io/instance: my-template
    name: my-template
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        deployment: my-template
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          deployment: my-template
      spec:
        containers:
        - command:
          - /bin/sh
          - -c
          - while true; do echo Writing env variables; env;sleep 10; done
          env:
          - name: VAR1
            value: value1
          - name: VAR2
            value: value2
          image: quay.io/quay/busybox@sha256:92f3298bf80a1ba949140d77987f5de081f010337880cd771f7e7fc928f8c74d
          imagePullPolicy: IfNotPresent
          name: my-template
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
